--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@ejshafran/types",
   "version": "1.0.0",
   "description": "Types for @ejshafran packages",
-  "main": "index.d.ts",
+  "main": "lib/index.d.ts",
+  "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
     "build": "tsc",
@@ -35,5 +36,8 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.8.4"
-  }
+  },
+  "files": [
+    "/lib/**/*"
+  ]
 }
